--- a/front/src/index.css
+++ b/front/src/index.css
@@ -112,17 +112,32 @@ a {
   grid-row: 1;
   grid-column: 1;
 }
-.col-box-con {
-  grid-area: leftCol;
+.ranksHome {
   grid-row: 2;
   grid-column: 1;
   background-color: rgba(45,56,68,.35);
   box-shadow: 0 1px 1px 0 rgba(0,0,0,.5);
 }
-.contentCol {
+.newsHome {
+  grid-row: 3;
+  grid-column: 1;
+}
+.eventsHome {
   grid-row: 2;
   grid-column: 2;
 }
+.matchesHome {
+  grid-row: 2;
+  grid-column: 3;
+}
 .grid-contain {
   display: grid;
+}
+.news_title {
+  font-size: 20px;
+  padding: 10px;
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  white-space: nowrap;
+  width: 50px;
 }
